Cleanup: use java8 way and fix/improve wrong usages